--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "routing",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://localhost/build/",
+  "homepage": "https://hyongshu.github.io/react-sub-url/",
   "dependencies": {
+    "gh-pages": "^2.2.0",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5"
   },
   "scripts": {
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
